# slint-android-template

./: Cargo.toml  README.md
src/: lib.rs
ui/: app-window.slint
